@@ -1,32 +1,18 @@
-dpkg -s openjfx &> /dev/null
-if [ $? != 1 ] 
-then 
-
-java --module-path ./u_javafx/lib/ --add-modules=ALL-MODULE-PATH -Xmx640m -cp .:./bin\
-:lib/*\
-:lib/richtextfx-fat-0.8.1.jar tool.xmodeler.XModeler ./ini-linux.txt
-
-else 
-
-if [ $EUID != 0 ]
+JAVA_VER=$(java -version 2>&1 | sed -n ';s/.* version "\(.*\)\.\(.*\)\..*".*/\1\2/p;')
+echo $JAVA_VER
+if [ $JAVA_VER -le 18 ]
 then
 
-echo "You have to run the application with admin permissions, 
-	if the required packages are not already installed!"
-echo "Please allow the access as root user to download Open JavaFX: "
-sudo apt-get --assume-yes install openjfx
-java --module-path ./u_javafx/lib/ --add-modules=ALL-MODULE-PATH -Xmx640m -cp .:./bin\
+echo "StartUp for Java 8 and older.."
+java -Xmx640m -cp .:./bin\
 :lib/*\
 :lib/richtextfx-fat-0.8.1.jar tool.xmodeler.XModeler ./ini-linux.txt
 
 else
-
-echo "Installing Open JavaFX.."
-sudo apt-get --assume-yes install openjfx
+echo "StartUp for Java 9 and newer.."
 
 java --module-path ./u_javafx/lib/ --add-modules=ALL-MODULE-PATH -Xmx640m -cp .:./bin\
 :lib/*\
 :lib/richtextfx-fat-0.8.1.jar tool.xmodeler.XModeler ./ini-linux.txt
 
-fi
 fi
